--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Medic</title>
+    <title>Pop</title>
     <script src="js/phaser.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/BootState.js"></script>
+	<script src="js/PreloadState.js"></script>
+	<script src="js/IntroState.js"></script>
+	<script src="js/PlayState.js"></script>
 
 <style>
 body
