--- a/index.html
+++ b/index.html
@@ -27,58 +27,55 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Medic</h2>
+<h2>Pop</h2>
 <ul>
 
 <li><strong>High Concept:</strong>
-Players perform triage as a conscientious objector during the war.
+Pop all the bubbles to win.
 </li>
 
 <li><strong>Player Experience Goals:</strong>
-Players will have to decide whether they have time to treat all a patient's wounds or pass them by -- you only have so much time to spend per person when doing triage.
+Players will have fun trying to beat their best times.
 </li>
 
 <li><strong>Genre:</strong>
-A time-based medical sim game.
+An abstract puzzle game. (Sort of?)
 </li>
 
 <li><strong>Game play:</strong>
-The player uses the mouse to drag banadages to the wounds on the soldier to patch them up.
+Use the mouse to click on the bubbles to pop them.
 </li>
 
 <li><strong>Prototype goal:</strong>
-Experimentation with making a time driven game that is fun instead of frustrating/stressful.
+Experimentation an abstract game, as well as using game states.
 </li>
 
 <li><strong>Features:</strong>
-The concept is somewhat unique, but the more interesting gameplay mechanics haven't been added in yet, as this is more of a test on working with time sensitive games -- an aspect of gameplay I generally dislike as a player.
+This game feautures a very satisfying popping sound and entertaining gameplay.
 </li>
 
 <li><strong>Setting/Premise:</strong>
-It's about a soldier drafted for the Vietnam war who dislikes war and killing -- so he opts to become a medic instead.
+This game is abstract, so there isn't really one.
 </li>
 
 <li><strong>Target Audience:</strong>
-People who have an intest in emergenct medical situations (as the later mechanics do actually reflect real-life priorities when in a triage situation) and making life or death choices. 
+People who are entertained by popping bubble wrap -- so everyone! 
 </li>
 
 <li><strong>Play time:</strong>
-About a minute, can get longer as you get better at the game.
+Varies on how well you do, anywhere from 20 seconds to a minute usually.
 </li>
 
 <li><strong>Strategies:</strong>
-Effective strategies in the current version bandaging those with 3 or less injuries -- more and you should pass.
+Try popping all in one area and then moving on to other high density areas before chasing single bubbles down.
 </li>
 
 <li><strong>Prototype Assets:</strong>
-Body image -- https://www.pinterest.com/pin/435160382717660101/
-Grass background -- https://www.flickr.com/photos/wwarby/5106740833/
-Blood symbol -- http://mspaintadventures.wikia.com/wiki/Aspect
+All assets made by me.
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
-http://examples.phaser.io/_site/view_full.html?d=sprites&f=overlap+without+physics.js&t=overlap%20without%20physics
-http://examples.phaser.io/_site/view_full.html?d=time&f=basic+timed+event.js&t=basic%20timed%20event
+I was inspired by Zack Fergeson's slime abstract game from assignment 7.  I'm sure there are also pre-existing versions of this game.
 </li>
 
 </ul>
