--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ All assets made by me.
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
-I was inspired by Zack Fergeson's slime abstract game from assignment 7.  I'm sure there are also pre-existing versions of this game.
+I was inspired by Zack Fergus' slime abstract game from assignment 7.  I'm sure there are also pre-existing versions of this game.
 </li>
 
 </ul>
